fixed layout issue on shrink size

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -150,6 +150,9 @@ h2:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
+    float: left;
+    width: 20vw;
+    margin-top: 20px;
 }
 
 .actionCenter {
@@ -168,7 +171,6 @@ h2:hover {
     opacity: 0.8;
     width: 150px;
     height: 50px;
-    margin-right: -50%;
 }
 
   /* The popup form - hidden by default */
@@ -177,9 +179,6 @@ h2:hover {
     border: 3px solid black;
     z-index: 9;
     max-width: fit-content;
-    position: absolute;
-    top: 55px;
-    right: 20%;
     font-family: poke, Arial, Helvetica, sans-serif;
     letter-spacing: 3px;
 }
@@ -267,17 +266,6 @@ label {
     .menu {
         margin-left: 20px;
     }
-    .form-popup {
-        display: none;
-        border: 3px solid black;
-        z-index: 11;
-        max-width: fit-content;
-        position: fixed;
-        top: 55px;
-        right: 0;
-        font-family: poke, Arial, Helvetica, sans-serif;
-        letter-spacing: 3px;
-    }
 }
 
 @media screen and (max-width: 700px) {
@@ -289,6 +277,25 @@ label {
     }
     .menu {
         margin: 5px;
+    }
+    header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .open-button {
+        background-color: black;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 12px;
+        font-weight: bold;
+        letter-spacing: 3px;
+        color: white;
+        box-shadow: 5px 5px 5px gray;
+        border: 1px solid white;
+        cursor: pointer;
+        opacity: 0.8;
+        width: 100px;
+        height: 30px;
     }
     .form-popup {
         display: none;
